--- a/public/css/sistema_web.css
+++ b/public/css/sistema_web.css
@@ -7,17 +7,24 @@ html, body {
     min-height: 100%;
 }
 
-.wrapper {
-    display: flex;
-    align-items: stretch;
+body{
+    min-height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
+.wrapper {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
+}
 
 /*********************FOOTER******************************/
 .footer {
-    background: #60584d;
-    color: #FFFFFF;
-    height: 70px;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    background-color: black;
+    color: white;
+    margin-top: 20px;
 }
 
 
