--- a/public/css/sistema_web.css
+++ b/public/css/sistema_web.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-/*********************FOOTER******************************/
+/*********************Body******************************/
 html, body {
     background: #F5F5F5 !important;
     font-family: 'Roboto', sans-serif;
@@ -7,7 +7,7 @@ html, body {
     min-height: 100%;
 }
 
-body{
+body {
     min-height: 100%;
     font-family: "Helvetica Neue", Arial, sans-serif;
 }
@@ -18,14 +18,27 @@ body{
     grid-template-rows: 1fr auto;
 }
 
-/*********************FOOTER******************************/
-.footer {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    background-color: black;
-    color: white;
-    margin-top: 20px;
+.footer{
+    background: #014c8c;
+    color: whitesmoke;
+    padding-bottom: 5px;
 }
+/*********************INPUTS******************************/
+.pdf-input {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: black solid 1px;
+    padding-right: 5px;
+    padding-left: 5px;
+    text-align: center;
+    border-radius: 0px;
+
+    height: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 
 
 
