Agregando vistas para el seguimiento y control de grupos

--- a/public/css/aaron.css
+++ b/public/css/aaron.css
@@ -16,8 +16,9 @@ html, body {
 }
 
 .footer {
-    background: #60584d;
-    color: #FFFFFF;
+    background: #014c8c;
+    color: white;
+    padding-bottom: 5px;
     height: 70px;
 }
 
