--- a/public/css/aaron.css
+++ b/public/css/aaron.css
@@ -39,7 +39,7 @@ a:focus {
 }
 
 .navbar {
-    padding: 15px 10px;
+    /*padding: 15px 10px;*/
     background: #004050;
     /*background-color: #014c8c;*/
     border: none;
