--- a/public/css/sistema_web.css
+++ b/public/css/sistema_web.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 /*********************Body******************************/
 html, body {
     background: #F5F5F5 !important;
-    font-family: 'Roboto', sans-serif;
+    /*font-family: 'Roboto', sans-serif;*/
+    font-family: 'Poppins', sans-serif;
     height: 100%;
     min-height: 100%;
 }
 
 body {
     min-height: 100%;
-    font-family: "Helvetica Neue", Arial, sans-serif;
+    /*font-family: "Helvetica Neue", Arial, sans-serif;*/
+    font-family: 'Poppins', sans-serif;
 }
 
 .wrapper {
