--- a/public/css/sistema_web.css
+++ b/public/css/sistema_web.css
@@ -21,11 +21,12 @@ body {
     grid-template-rows: 1fr auto;
 }
 
-.footer{
+.footer {
     background: #014c8c;
     color: whitesmoke;
     padding-bottom: 5px;
 }
+
 /*********************INPUTS******************************/
 .pdf-input {
     border-top: none;
@@ -42,8 +43,8 @@ body {
     margin-bottom: 0;
 }
 
-
-
+.contenedor:hover .imagen {-webkit-transform:scale(1.3);transform:scale(1.3);}
+.contenedor {overflow:hidden;}
 
 
 
